--- a/index.html
+++ b/index.html
@@ -9,5 +9,6 @@
 <body>
     <h1>this is dev branch</h1>
     <h1>this is feature 1 branch</h1>
+     <h1>this is feature 2 branch</h1>
 </body>
 </html>
