this is pre commit

--- a/index.html
+++ b/index.html
@@ -11,6 +11,6 @@
     <h1>this is feature 1 branch</h1>
      <h1>this is feature 2 branch</h1>
      <h1>this is post - commit</h1>
-     <h1>this is pre-commit</h1>
+     <h1>this is pre-commit1</h1>
 </body>
 </html>
